25-08-2004 Qball <Qball@qballcow.nl>
	* src/mm-keys.[c|h]:	Added primary support for mm-keys.

23-08-2004 Qball <Qball@qballcow.nl>
	* src/mpdinteraction.c:	Title is set when connecting. (To "GMPC - Connected")
	* src/tray-icon.c:			Tooltip doesnt use monospace font anymore.
	* src/tray-icon.c:			Tooltip resizes when needed (code somehow dissapeared)
	* src/popup.c:			Made sure the tooltip has a nice line around it.

20-08-2004 Qball <Qball@qballcow.nl>
	* src/tray-icon.c:	Tooltip resizes when needed
	* src/tray-icon.c:	Tooltip uses monospace font

19-08-2004 Qball <Qball@qballcow.nl>
	* src/main.h:		Added option field for rounded corner
	* src/tray-icon.c:	Made rounded corners a config option.
	* src/tray-icon.c:	Rounded tooltip corners.
	* src/tray-icon.c:	Fix crash when not connected
	* src/tray-icon.c:	Show right tooltip when not connected

18-08-2004 Qball <Qball@qballcow.nl>
	* src/tray-icon.c:	Fixed some xinerama issues.
	* src/strfsong.c:	Remove '_' from strings.
	* src/tray-icon.c:	Added advanced tooltip support.
	* src/player.c:		Added tooltip to song window. (removed again)

07-08-2004 Qball <Qball@qballcow.nl>
	* Fixed some shadows in preferences window

03-08-2004 Qball <Qball@qballcow.nl>
	* Cleanup the list_tooltip

02-08-2004 Qball <Qball@qballcow.nl>
	* Applied patches from Pav Lucistnik for compiling on gcc < 3
	* Added src/list_tooltip.c
	* Very very basic support for tooltips in playlist window.

13-07-2004 Qball <Qball@qballcow.nl>
	* glade/gmpc.glade:	Fix typo.

12-07-2004 Qball <Qball@qballcow.nl>
	* src/playlist2.c:	Fixed bug that moved playlist window when
	search from id3window.
	* po/fr.po:		Updated translation
	* src/callback.c:	check_for_errors now checks if there is an
	actual connection, also don't try to print something you just free'ed.
	* Makefile.am:		Pack some intool-* stuff.

11-07-2004 Qball < Qball@qballcow.nl>
	* src/player.c:	All buttons in the main window can now be themed. 

10-07-2004 Qball <Qball@qballcow.nl>